--- a/cv.tex
+++ b/cv.tex
@@ -116,12 +116,11 @@
 % \end{tabularx}
 
 \begin{tabularx}{\linewidth}{@{} C @{}}
-\Huge{Your Name} \\[7.5pt]
-\href{https://github.com/username}{\raisebox{-0.05\height}\faGithub\ username} \ $|$ \ 
-\href{https://linkedin.com/in/username}{\raisebox{-0.05\height}\faLinkedin\ username} \ $|$ \ 
-\href{https://mysite.com}{\raisebox{-0.05\height}\faGlobe \ mysite.com} \ $|$ \ 
-\href{mailto:email@mysite.com}{\raisebox{-0.05\height}\faEnvelope \ email@mysite.com} \ $|$ \ 
-\href{tel:+000000000000}{\raisebox{-0.05\height}\faMobile \ +00.00.000.000} \\
+\Huge{Zhang Xuecheng} \\[7.5pt]
+\href{https://github.com/zachz1016{\raisebox{-0.05\height}\faGithub\ username} \ $|$ \ 
+\href{https://www.linkedin.com/in/xuecheng-zhang-29b0611b1/}{\raisebox{-0.05\height}\faLinkedin\ username} \ $|$ \ 
+\href{xuechengzhang1016@gmail.com}{\raisebox{-0.05\height}\faEnvelope \ email@mysite.com} \ $|$ \ 
+\href{tel:+86 81689638}{\raisebox{-0.05\height}\faMobile \ +00.00.000.000} \\
 \end{tabularx}
 
 %----------------------------------------------------------------------------------------
@@ -129,24 +128,35 @@
 %----------------------------------------------------------------------------------------
 
 %Interests/ Keywords/ Summary
-\section{Summary}
-This CV is automatically generated and deployed using the \href{https://github.com/jitinnair1/autoCV}{autoCV} template along with GitHub Actions such that a new version of the CV is compiled, published and ready for use when the cv.tex file is updated. For details, \href{https://github.com/jitinnair1/autoCV}{click here}.
+\section{Address}
+APT BLK 7 KIM TIAN PLACE #23-63 SINGAPORE(160007)
 
 %Experience
 \section{Work Experience}
 
 \begin{tabularx}{\linewidth}{ @{}l r@{} }
-\textbf{Designation} & \hfill Jan 2021 - present \\[3.75pt]
-\multicolumn{2}{@{}X@{}}{long long line of blah blah that will wrap when the table fills the column width long long line of blah blah that will wrap when the table fills the column width long long line of blah blah that will wrap when the table fills the column width long long line of blah blah that will wrap when the table fills the column width}  \\
-\end{tabularx}
-
-\begin{tabularx}{\linewidth}{ @{}l r@{} }
-\textbf{Designation} & \hfill Mar 2019 - Jan 2021 \\[3.75pt]
+\textbf{FULL STACK DEVELOPER INTERN} & \hfill Aug 2022 - Feb 2023 \\[3.75pt]
 \multicolumn{2}{@{}X@{}}{
 \begin{minipage}[t]{\linewidth}
     \begin{itemize}[nosep,after=\strut, leftmargin=1em, itemsep=3pt]
-        \item[--] long long line of blah blah that will wrap when the table fills the column width
-        \item[--] again, long long line of blah blah that will wrap when the table fills the column width but this time even more long long line of blah blah. again, long long line of blah blah that will wrap when the table fills the column width but this time even more long long line of blah blah
+        \item[--] Involved in staff management app(ChuGo App) and invetory management system(Ops App) development, including the contract upload, contract management and digital signature functionalities utilizing Angular in Ionic Framework, PHP Laravel, and PostgreSQL for database.
+        \item[--] Participated in Lexis Job development, a talent acquisition platform, utilizing React, NodeJS, and PostgreSQL. Smart recommendation and auto complete sentence functionalities. Design, develop, and implement high performance relational database tables for the application which successfully meet the needs of the company.
+        \item[--] Performed data analytics tasks with PostgreSQL and PowerBI to facilitate data visualisations and help executives make data-driven decisions. 
+        \item[--] Conduct market research and analytics to identify trends and opportunities in the marketplace, analyzing and interpreting data to inform business decisions.
+    \end{itemize}
+    \end{minipage}
+}
+\end{tabularx}
+
+\begin{tabularx}{\linewidth}{ @{}l r@{} }
+\textbf{ASSISTANT OPERATING ENGINEER INTERN} & \hfill Mar 2017 - Jun 2017 \\[3.75pt]
+\multicolumn{2}{@{}X@{}}{
+\begin{minipage}[t]{\linewidth}
+    \begin{itemize}[nosep,after=\strut, leftmargin=1em, itemsep=3pt]
+        \item[--] Assist in operating the production department Address operational issues and concerns in a timely fashion. 
+        \item[--] Manage the product entry and exit process by registering products, monitoring inventories, and tracking shipments.
+        \item[--] Follow up with customers to ensure that all orders are fulfilled in a timely manner.  
+        \item[--] Work with other departments to ensure that products are entered and shipped according to established procedures. 
     \end{itemize}
     \end{minipage}
 }
@@ -156,8 +166,10 @@ This CV is automatically generated and deployed using the \href{https://github.c
 \section{Projects}
 
 \begin{tabularx}{\linewidth}{ @{}l r@{} }
-\textbf{Some Project} & \hfill \href{https://some-link.com}{Link to Demo} \\[3.75pt]
-\multicolumn{2}{@{}X@{}}{long long line of blah blah that will wrap when the table fills the column width long long line of blah blah that will wrap when the table fills the column width long long line of blah blah that will wrap when the table fills the column width long long line of blah blah that will wrap when the table fills the column width}  \\
+\textbf{X-ray Classification System} & \hfill \href{https://github.com/tanshihuai/X-Ray-Co}{Link to Github} \\[3.75pt]
+\multicolumn{2}{@{}X@{}}{A computer-aided diagnostic system that uses artificial intelligence to analyze and classify X-ray images using Python. It can accurately identify various diseases including Covid-19, pneumonia and pulmonaru edema. The system is equipped with deep learning algorithms and utilizes a large dataset of X-ray images to train the model. The system can be used to improve diagnosis accuracy and reduce workload for radiologists. }  \\
+\textbf{Restaurant Order System} & \hfill \href{https://github.com/kellock117/RestaurantOrderSystem}{Link to Github} \\[3.75pt]
+\multicolumn{2}{@{}X@{}}{A system that was designed to provide customers with a fast and efficient way to order food using NodeJS, HTML5 and MongoDB. The system allows customers to order items easily and quickly, view their order status, and pay for the order. The order system also provides restaurant staff with a comprehensive view of all orders in real-time, and a daily, weekly and monthly basis turnover rate for the owner.}  \\
 \end{tabularx}
 
 %----------------------------------------------------------------------------------------
@@ -165,31 +177,22 @@ This CV is automatically generated and deployed using the \href{https://github.c
 %----------------------------------------------------------------------------------------
 \section{Education}
 \begin{tabularx}{\linewidth}{@{}l X@{}}	
-2030 - present & PhD (Subject) at \textbf{University} \hfill \normalsize (GPA: 4.0/4.0) \\
+2020 - 2023 & Bachelor of Science, Computer Science(Big Data) at \textbf{University Of Wollongong} \\
 
-2023 - 2027 & Bachelor's Degree at \textbf{College} \hfill (GPA: 4.0/4.0) \\ 
+2015 - 2018 & Diploma, Biomedical Engineering at \textbf{Nanyang Polytechnic} \\ 
 
-2022 & Class 12th Some Board \hfill  (Grades) \\
-
-2021 & Class 10th Some Board \hfill  (Grades) \\
 \end{tabularx}
 
-%----------------------------------------------------------------------------------------
-%	PUBLICATIONS
-%----------------------------------------------------------------------------------------
-\section{Publications}
-\begin{refsection}[citations.bib]
-\nocite{*}
-\printbibliography[heading=none]
-\end{refsection}
 
 %----------------------------------------------------------------------------------------
 %	SKILLS
 %----------------------------------------------------------------------------------------
-\section{Skills}
+\section{Technical Skills}
 \begin{tabularx}{\linewidth}{@{}l X@{}}
-Some Skills &  \normalsize{This, That, Some of this and that etc.}\\
-Some More Skills  &  \normalsize{Also some more of this, Some more that, And some of this and that etc.}\\  
+Programming Languages: &  \normalsize{Python, JavaScript, Java, PHP, SQL}\\
+Front-end Development: &  \normalsize{React, Angular}\\
+Database Platform and Applications: &  \normalsize{Hadoop, Hive, Spark, Pig Latin}\\  
+Data Analysis Tools: &  \normalsize{Tableau, PowerBI, R Studio}\\  
 \end{tabularx}
 
 \vfill
