--- a/cv.tex
+++ b/cv.tex
@@ -1,3 +1,5 @@
+
+
 %-----------------------------------------------------------------------------------------------------------------------------------------------%
 %	The MIT License (MIT)
 %
@@ -117,20 +119,27 @@
 
 \begin{tabularx}{\linewidth}{@{} C @{}}
 \Huge{Zhang Xuecheng} \\[7.5pt]
-\href{https://github.com/zachz1016{\raisebox{-0.05\height}\faGithub\ username} \ $|$ \ 
-\href{https://www.linkedin.com/in/xuecheng-zhang-29b0611b1/}{\raisebox{-0.05\height}\faLinkedin\ username} \ $|$ \ 
-\href{xuechengzhang1016@gmail.com}{\raisebox{-0.05\height}\faEnvelope \ email@mysite.com} \ $|$ \ 
-\href{tel:+86 81689638}{\raisebox{-0.05\height}\faMobile \ +00.00.000.000} \\
+\href{https://github.com/zachz1016}{\raisebox{-0.05\height}\faGithub\ GitHub} \ $|$ \ 
+\href{https://www.linkedin.com/in/xuecheng-zhang-29b0611b1/}{\raisebox{-0.05\height}\faLinkedin\ LinkedIn} \ $|$ \ 
+\href{xuechengzhang1016@gmail.com}{\raisebox{-0.05\height}\faEnvelope \ xuechengzhang1016@gmail.com} \ $|$ \ 
+\href{tel:+86 81689638}{\raisebox{-0.05\height}\faMobile \ +65 81689638} \\
+\end{tabularx}
+
+
+%----------------------------------------------------------------------------------------
+%	EDUCATION
+%----------------------------------------------------------------------------------------
+\section{Education}
+\begin{tabularx}{\linewidth}{@{}l X@{}}	
+\textbf{BSc, Computer Science(Big Data) at University Of Wollongong} & \hfill July 2020 - Mar 2023 \\[3.75pt]
+
+\textbf{Diploma, Biomedical Engineering at Nanyang Polytechnic} & \hfill Apr 2015 - May 2017 \\[3.75pt] 
+
 \end{tabularx}
 
 %----------------------------------------------------------------------------------------
 % EXPERIENCE SECTIONS
 %----------------------------------------------------------------------------------------
-
-%Interests/ Keywords/ Summary
-\section{Address}
-APT BLK 7 KIM TIAN PLACE #23-63 SINGAPORE(160007)
-
 %Experience
 \section{Work Experience}
 
@@ -139,10 +148,9 @@ APT BLK 7 KIM TIAN PLACE #23-63 SINGAPORE(160007)
 \multicolumn{2}{@{}X@{}}{
 \begin{minipage}[t]{\linewidth}
     \begin{itemize}[nosep,after=\strut, leftmargin=1em, itemsep=3pt]
-        \item[--] Involved in staff management app(ChuGo App) and invetory management system(Ops App) development, including the contract upload, contract management and digital signature functionalities utilizing Angular in Ionic Framework, PHP Laravel, and PostgreSQL for database.
+        \item[--] Involved in staff management app(ChuGo App) and inventory management system(Ops App) development, including the contract upload, contract management and digital signature functionalities utilizing Angular in Ionic Framework, PHP Laravel, and PostgreSQL for database.
         \item[--] Participated in Lexis Job development, a talent acquisition platform, utilizing React, NodeJS, and PostgreSQL. Smart recommendation and auto complete sentence functionalities. Design, develop, and implement high performance relational database tables for the application which successfully meet the needs of the company.
-        \item[--] Performed data analytics tasks with PostgreSQL and PowerBI to facilitate data visualisations and help executives make data-driven decisions. 
-        \item[--] Conduct market research and analytics to identify trends and opportunities in the marketplace, analyzing and interpreting data to inform business decisions.
+        \item[--] Conducted market researches and performed data analytic tasks with Excel, PostgreSQL and PowerBI to facilitate data visualisations and help executives make data-driven decisions. 
     \end{itemize}
     \end{minipage}
 }
@@ -153,7 +161,6 @@ APT BLK 7 KIM TIAN PLACE #23-63 SINGAPORE(160007)
 \multicolumn{2}{@{}X@{}}{
 \begin{minipage}[t]{\linewidth}
     \begin{itemize}[nosep,after=\strut, leftmargin=1em, itemsep=3pt]
-        \item[--] Assist in operating the production department Address operational issues and concerns in a timely fashion. 
         \item[--] Manage the product entry and exit process by registering products, monitoring inventories, and tracking shipments.
         \item[--] Follow up with customers to ensure that all orders are fulfilled in a timely manner.  
         \item[--] Work with other departments to ensure that products are entered and shipped according to established procedures. 
@@ -167,22 +174,10 @@ APT BLK 7 KIM TIAN PLACE #23-63 SINGAPORE(160007)
 
 \begin{tabularx}{\linewidth}{ @{}l r@{} }
 \textbf{X-ray Classification System} & \hfill \href{https://github.com/tanshihuai/X-Ray-Co}{Link to Github} \\[3.75pt]
-\multicolumn{2}{@{}X@{}}{A computer-aided diagnostic system that uses artificial intelligence to analyze and classify X-ray images using Python. It can accurately identify various diseases including Covid-19, pneumonia and pulmonaru edema. The system is equipped with deep learning algorithms and utilizes a large dataset of X-ray images to train the model. The system can be used to improve diagnosis accuracy and reduce workload for radiologists. }  \\
-\textbf{Restaurant Order System} & \hfill \href{https://github.com/kellock117/RestaurantOrderSystem}{Link to Github} \\[3.75pt]
+\multicolumn{2}{@{}X@{}}{A computer-aided diagnostic system that uses artificial intelligence to analyze and classify X-ray images using Python. It can accurately identify various diseases including Covid-19, pneumonia and pulmonary edema. The system is equipped with deep learning algorithms and utilizes a large data-set of X-ray images to train the model. The system can be used to improve diagnosis accuracy and reduce workload for radiologists. }  \\
+\textbf{Restaurant Order System} & \hfill \href{https://github.com/kellock117/RestaurantOrderSystem}{Link to GitHub} \\[3.75pt]
 \multicolumn{2}{@{}X@{}}{A system that was designed to provide customers with a fast and efficient way to order food using NodeJS, HTML5 and MongoDB. The system allows customers to order items easily and quickly, view their order status, and pay for the order. The order system also provides restaurant staff with a comprehensive view of all orders in real-time, and a daily, weekly and monthly basis turnover rate for the owner.}  \\
 \end{tabularx}
-
-%----------------------------------------------------------------------------------------
-%	EDUCATION
-%----------------------------------------------------------------------------------------
-\section{Education}
-\begin{tabularx}{\linewidth}{@{}l X@{}}	
-2020 - 2023 & Bachelor of Science, Computer Science(Big Data) at \textbf{University Of Wollongong} \\
-
-2015 - 2018 & Diploma, Biomedical Engineering at \textbf{Nanyang Polytechnic} \\ 
-
-\end{tabularx}
-
 
 %----------------------------------------------------------------------------------------
 %	SKILLS
@@ -190,7 +185,7 @@ APT BLK 7 KIM TIAN PLACE #23-63 SINGAPORE(160007)
 \section{Technical Skills}
 \begin{tabularx}{\linewidth}{@{}l X@{}}
 Programming Languages: &  \normalsize{Python, JavaScript, Java, PHP, SQL}\\
-Front-end Development: &  \normalsize{React, Angular}\\
+Front-end Development: &  \normalsize{React, Angular, JQuery}\\
 Database Platform and Applications: &  \normalsize{Hadoop, Hive, Spark, Pig Latin}\\  
 Data Analysis Tools: &  \normalsize{Tableau, PowerBI, R Studio}\\  
 \end{tabularx}
